refactoring deprecated functions